<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/lastname_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/patronymic_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patronymic"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/age_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="number" />

        <EditText
            android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/login_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/post_field"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:text="@string/post"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/post_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/post_spin"
                android:minHeight="48dp" />
        </LinearLayout>

<!--        <EditText-->
<!--            android:id="@+id/post_field"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/post"-->
<!--            android:text=""-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="20sp" />-->

        <EditText
            android:id="@+id/divizion_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/divizion"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>