<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name_events_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/name_events"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/data_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/data"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            android:inputType="date"/>

        <EditText
            android:id="@+id/organizer_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/organizer"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/place_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/place"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/napr_text"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/napravlenie_text" />

            <Spinner
                android:id="@+id/direction_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/napravlenie"
                android:minHeight="48dp" />
        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>