<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    tools:context=".Authorization">

    <Button
        android:id="@+id/vxod_button"
        android:layout_width="146dp"
        android:layout_height="48dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/adamina"
        android:text="@string/authorization_button"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/authorization_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/adamina"
        android:text="@string/authorization_text"
        android:textColor="@color/purple_700"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/hint_1"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorization_text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/hint_2"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/registracia_button"
        android:layout_width="285dp"
        android:layout_height="51dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="65dp"
        android:fontFamily="@font/adamina"
        android:text="@string/registration_button"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vxod_button" />
</androidx.constraintlayout.widget.ConstraintLayout>