<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/register_event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/name_events"
            android:text="" />

        <EditText
            android:id="@+id/register_event_fio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/fio"
            android:text="" />

        <EditText
            android:id="@+id/register_event_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/mail"
            android:text=""/>


    </LinearLayout>
</androidx.cardview.widget.CardView>