<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/close_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_settings"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_alignParentStart="true"
                android:textStyle="bold|italic"/>

            <TextView
                android:id="@+id/save_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_settings"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginRight="17dp"
                android:layout_alignParentEnd="true"
                android:textStyle="bold|italic"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_account_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_user"
        android:layout_below="@+id/toolbar_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/settings_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_account_image"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:hint="@string/settings_hint1"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/settings_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_name"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:hint="@string/settings_hint2"
        android:minHeight="48dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/settings_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_lastname"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:hint="@string/settings_hint3"
        android:minHeight="48dp"
        android:padding="10dp" />


</RelativeLayout>