<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="12dp"
    app:cardElevation="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/events_item_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:fontFamily="@font/adamina"
            android:text="@string/events_item_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_events"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sport_event" />

        <TextView
            android:id="@+id/events_item_organizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:fontFamily="@font/adamina"
            android:text="@string/events_item_organizer"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/events_item_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:fontFamily="@font/adamina"
            android:text="@string/events_item_date"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/events_item_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:fontFamily="@font/adamina"
            android:text="@string/events_item_place"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/events_item_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/purple_500"
            android:fontFamily="@font/adamina"
            android:text="@string/events_item_direction"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <!--        <Button-->
        <!--            android:id="@+id/events_item_button"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/events_item_button"-->
        <!--            android:fontFamily="@font/adamina"-->
        <!--            android:textSize="17sp"/>-->
    </LinearLayout>
</androidx.cardview.widget.CardView>