<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/events_element"
    tools:context=".Events">

    <TextView
        android:id="@+id/events_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/adamina"
        android:text="@string/events_app"
        android:textColor="@color/purple_700"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/events_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/events_button1"
            android:textSize="17sp" />

        <Button
            android:id="@+id/events_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:text="@string/events_button2"
            android:textSize="17sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/events_open_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/adamina"
        android:text="@string/events_open_text"
        android:textColor="@color/purple_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoryRecycler"
        android:layout_width="406dp"
        android:layout_height="34dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events_open_text" />

    <RelativeLayout
        android:layout_width="406dp"
        android:layout_height="330dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/events_open_text">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_events"
            android:layout_width="409dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-2dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

<!--    <androidx.appcompat.widget.SearchView-->
<!--        android:id="@+id/search_event"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:background="@color/grey"-->
<!--        app:queryHint="@string/search_event"-->
<!--        app:iconifiedByDefault="false"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/events_open_text" />-->


<!--        <ListView-->
<!--        android:id="@+id/list_events"-->
<!--        android:layout_width="409dp"-->
<!--        android:layout_height="353dp"-->
<!--        android:layout_marginStart="1dp"-->
<!--        android:layout_marginEnd="1dp"-->
<!--        android:layout_marginBottom="1dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <include layout="@layout/content_events" />-->



</androidx.constraintlayout.widget.ConstraintLayout>


